# colorseq-rust

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build-linux.yml  build-win.yml  main.yml  rust.yml
src/: instances.rs  lib.rs
src/instances/: color.rs  colors_info.rs
