[package]
name = "colorseq"
license = "MIT"
version = "1.0.0"
edition = "2021"
description = "A library that manages the VT color sequences."
homepage = "https://aptivi.github.io/"
repository = "https://github.com/Aptivi/colorseq-rust"
readme = "README.md"
keywords = ["console", "graphics", "colors", "sequence", "vt"]
categories = ["command-line-interface", "data-structures", "graphics", "parsing"]

[dependencies]
serde_json = "1.0"
